fix(button): Correct vertical alignment of header right buttons, closes #704

--- a/scss/_bar.scss
+++ b/scss/_bar.scss
@@ -179,13 +179,13 @@
     }
   }
 
-  .button-bar > .button, 
+  .button-bar > .button,
   .buttons > .button {
     min-height: $button-bar-button-height - 1;
     line-height: $button-bar-button-height;
   }
 
-  .button-bar + .button, 
+  .button-bar + .button,
   .button + .button-bar {
     margin-left: 5px;
   }
@@ -196,7 +196,7 @@
   > .button.pull-right,
   .title + .buttons {
     position: absolute;
-    top: 6px;
+    top: 5px;
     right: 5px;
     bottom: 5px;
   }
